Categories are now displayed in the oil table modal when selecting an oil for spills, issue #438

--- a/css/less/skin.less
+++ b/css/less/skin.less
@@ -2835,7 +2835,8 @@ nav.navbar{
             cursor: pointer;
 
             .oilInfo{
-                display: inline;
+                display: inline-block;
+                float: right;
             }
 
         }
